# Codes

./: LIO-SAM 源码阅读  all_task  hw4_pipeline  main_task  text_manager.txt  trivial_task  代码编写
.VSCodeCounter/2020-10-19_09-43-33/: details.md  results.csv  results.md  results.txt
.VSCodeCounter/2020-10-19_09-44-35/: details.md  results.csv  results.md  results.txt
.VSCodeCounter/2020-11-19_09-41-06/: details.md  results.csv  results.md  results.txt
.VSCodeCounter/2020-12-10_14-56-39/: details.md  results.csv  results.md  results.txt
.VSCodeCounter/2021-03-06_20-33-05/: details.md  results.csv  results.md  results.txt
.VSCodeCounter/2021-03-06_20-49-15/: details.md  results.csv  results.md  results.txt
.history/33. vertical_line_slam/: CMakeLists_20210201161353.txt  CMakeLists_20210201161433.txt  (+15 more)
1. glog/: CMakeLists.txt  glog-test.FATAL  log20200921-105719.12241
11. boost-serialization/: CMakeLists.txt  cv_serialization.cpp  simple-case-no-invasive.cpp  stl-member-object.cpp
11. tic toc/: CMakeLists.txt  func_tic_toc.hpp  tic_toc-test.cpp  tic_toc.hpp
12. eigen/: CMakeLists.txt  map-test.cpp
12. random-generator/: random_generator.cpp
13. boost-serialization/: CMakeLists.txt  derived-base-serialization.cpp  simple-case-test.cpp  stl-member-object.cpp
14. pcl/analysis/: CMakeLists.txt  em_2d_gaussian_uniform.py  ndt.h  ndt_impl.hpp  test.cc  test_bad_scan.cc  voxel_grid_covariance.h  voxel_grid_covariance.hpp
16. cmake/: CMakeLists.txt  cmake 需要的内容
16. pcl/: CMakeLists.txt  registration代码阅读
17. openmp/: CMakeLists.txt  omp_exercise2.cpp  omp_exercise3.cpp  omp_exercise4.cpp  omp_exercise4_for_detail.cpp  omp_exercise4_private_shared.cpp  omp_exercise5.cpp
18. cmake/: CMakeLists.txt  cmake 需要的内容
19. sensor_funsion_hw/hw1_ceres_ndt/: CMakeLists.txt  ceres_ndt.cpp  ceres_ndt.h  ceres_ndt_se3(likely to be wrong).h  ceres_ndt_se3.h  ceres_ndt_so3.h
19. sensor_funsion_hw/hw3_calibra/: .~len 方差分析.docx  Allen 方差分析.docx  CMakeLists.txt  SO3_RK4_test.cpp  hw3_calibra.7z  hw_3_2_gyro.cpp  hw_3_3.cpp  hw_3_4.cpp
19. sensor_funsion_hw/hw4_filter/: CMakeLists.txt  ImuTypes.cc  ImuTypes.h  common.cpp  common.h  ekf.cpp  ekf.h  ekf_test.cpp  error_state_kalman_filter.cpp  error_state_kalman_filter.h  hw4_filter.7z  kalman_filter.cpp  kalman_filter.h  kalman_filter_interface.h  measure_module.h  optimization_module.h  task_list  推导过程.md  第四章_fkgkdfgy.7z
19. sensor_funsion_hw/hw4_filter/backup/: ImuTypes.h
19. sensor_funsion_hw/hw4_filter/backup_pre/: svd_test.cpp
19. sensor_funsion_hw/hw4_filter/config/: eskf.yaml
19. sensor_funsion_hw/hw4_filter/eskf/: error_state_kalman_filter.cpp  error_state_kalman_filter.h
2. io/: CMakeLists.txt
2. io/data_loader/: CMakeLists.txt
2. io/rosbag_convert/: rosbag_convert.cpp  rosbag_convert.h
2. rosbag-convert/: rosbag_convert.cpp  rosbag_info_get.hpp
21. pangolin/: CMakeLists.txt  pointcloud.cpp
22. slam_demo/: CMakeLists.txt  PnP.cpp  baseline.md  camera_model.h  convert.h  environment_builder.cpp  environment_builder.h  frame_interface.h  main_test.cpp  pointcloud_shower.h
25. cpptest/: CMakeLists.txt  inherit_test.cpp
25. slam_demo/: CMakeLists.txt  PnP.cpp  build_test_environment.h  environment_builder.h  environment_test.cpp
26. g2o/: CMakeLists.txt
26. opencv/: CMakeLists.txt  orb_and_pnp.cpp
27. python_basic/: basic_1.py  basic_2.py  basic_3.py  basic_7.py
28. cpptest/: CMakeLists.txt  macro_test.cpp
28. vslam_course/: fkgkdfgy-第一章作业.rar
28. vslam_course/HW6/code/: CMakeLists.txt  Direct_tracker.h  LK_self_tracker.h  common.h  opencv_tracker.h  test_case.cpp  test_case_dm.cpp  test_common.cpp  test_double_float.cpp  tracker_base.h
28. vslam_course/HW6/code/config/: config.yaml
29. algothrim_and_data_structure/: note.md
29. g2o/: CMakeLists.txt  VE_self_defined.h  g2o_basic_test.cpp
29. g2o/g2o_basic_example/: VE_self_powell_function.h  covariance_collector.h  g2o_curvefitting.cpp  g2o_powell_function.cpp
29. g2o/g2o_slam_demo/: g2o_icp_so3_r3.cpp  g2o_icp_so3_r3.h
30. python_basic/: basic.py
33. slam_test/: CMakeLists.txt  main
33. slam_test/config/: undistort.yml
33. slam_test/include/features/: line_extractor.h
38. line_feature/: doc.md
38. line_feature/sim/: CMakeLists.txt  ceres_line_cost_function.h  line_geometry.h  sim_env.h  test_sim.cc
4. sophus/: CMakeLists.txt  sophus_test.cpp
40. little_g2o/: doc.md
41. deep_vo/: CMakeLists.txt  config.yaml  data_loader.h  process.md  test_case.cc  times.txt  timestamps.txt
43. calib/: doc.md
44. convex_opt/: sketch.md
45. self_backend/code/: CMakeLists.txt  EuRoC_test.cpp  param.h
46. self_front_end/: design.md
5. gtest/: CMakeLists.txt  gtest_test_f.cpp
50. frequency_domain/: basic.md
6. yaml/: CMakeLists.txt  yaml-test.cpp
6. yaml/buid/: CMakeCache.txt  Makefile  cmake_install.cmake  yaml-test
7. eigen/: CMakeLists.txt  eigen-test-array-vector.cpp
7. eigen/function_test/: CMakeLists.txt  eigen_llt.cpp  eigen_svd.cpp
8. ceres/: 3rd-basic-test.cpp  5th-how-to-write-function-usable-in-ceres.cpp  6th-a-value-return-function-for-autodiff.cpp  6th-some-interface-for-autodiff.cpp  7th-value-jacobian-return-function-for-autodiff.cpp  9th-analytic-derivation.cpp  CMakeLists.txt  ceres linear solver 选型  ceres注意点总结
8. ceres/ceres_API_learning/: 8th-numericalDiff-example.cpp  9th-analytic-derivation.cpp
8. ceres/ceres_pnp/: ceres_pnp代码阅读
8. ceres/ceres_self_example/: ceres_icp.cpp  ceres_icp_analystic_se3.cpp  ceres_icp_analystic_se3_test.cpp  ceres_icp_analystic_so3_r3.cpp  ceres_icp_autodiff_q_r3.cpp  eigen_icp_so3_r3.cpp  eigen_svd_icp.cpp  eigen_svd_icp.h  eigen_svd_icp_test.cpp  local_parameter_test.cpp
8. ceres/detail_test/: ceres problem.h代码阅读  local_parameter_test.cpp
9. ros-melodic/: CMakeLists.txt
VP/: A Monocular SLAM System Leveraging Structural Regularity in Manhattan World
cmake/: g2o.cmake  opencv.cmake  pangolin.cmake
doc/: ORB_SLAM  VINS_Mono 源码  ceres 源码  imu_tk 源码  ndt_omp  学习.md
record/: 写给我自己.md
work_record/: weight_record.md
代码阅读笔记/: LIO-SAM  LeGo_LOAM
(+1931 files in other folders)
